--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask-APScheduler==1.12.2
-Flask==2.0.1
-certifi==2021.5.30
-dbus-python==1.2.16
-gunicorn==20.1.0
-hm-hardware-defs==0.1.5
-requests==2.25.1
-sentry-sdk==1.1.0
+Flask-APScheduler
+Flask
+certifi
+dbus-python
+gunicorn
+hm-hardware-defs
+requests
+sentry-sdk
