--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ requests==2.26.0
 retry==0.9.2
 sentry-sdk==1.1.0
 dbus-python==1.2.16
-hm_pyhelper @ https://github.com/radicale/hm-pyhelper/releases/download/v0.12.1/hm_pyhelper-0.12.1-py3-none-any.whl
+hm_pyhelper @ https://github.com/radicale/hm-pyhelper/releases/download/v0.12.1/hm_pyhelper-0.12.1rad-py3-none-any.whl
